<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    tools:context=".email_login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="268dp"
        android:text="@string/sign_up_later"
        android:textColor="#0049ff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="84dp"
        android:text="@string/coursera"
        android:textColor="#052cff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="136dp"
        android:text="@string/log_in_to_your_account"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="314dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_box"
        android:ems="12"

        android:hint="@string/email_required"
        android:inputType="text"

        android:textColor="#B5F8F8F8"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"

        android:autofillHints="password"
        android:background="@drawable/edit_text_box"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        android:textColor="#B5F8F8F8"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="161dp"
        android:layout_height="57dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="12dp"
        android:text="@string/forget_password"
        android:textColor="#0199ff"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="472dp"
        android:backgroundTint="#0074ff"
        android:text="@string/log_in"
        android:textColor="#000512"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#0074ff"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>