<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".loginpage">

    <View
        android:id="@+id/box1"
        android:layout_width="36dp"
        android:layout_height="241dp"
        android:layout_marginTop="52dp"
        android:background="#006bff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="17dp"
        android:text="Sign Up later"
        android:textColor="#0049ff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/box1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="418dp"
        android:layout_height="241dp"
        android:layout_marginTop="52dp"
        android:background="#006bff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/box_1"
        android:layout_width="20dp"
        android:layout_height="241dp"
        android:layout_marginTop="52dp"
        android:background="#00b9ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/box_2"
        android:layout_width="26dp"
        android:layout_height="240dp"
        android:layout_marginTop="52dp"
        android:background="#0199ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/box_3"
        android:layout_width="22dp"
        android:layout_height="241dp"
        android:layout_marginTop="52dp"
        android:background="#0053ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/big_box"
        android:layout_width="276dp"
        android:layout_height="240dp"
        android:layout_marginTop="52dp"
        android:background="#1740ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/coursera"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="104dp"
        android:layout_marginTop="148dp"
        android:text="@string/des"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:text="@string/log_in_or_sign_up"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/googlebtn"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="396dp"
        android:backgroundTint="#000512"
        android:text="@string/google"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/googlelogo"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="408dp"


        android:background="@drawable/google_alt_svgrepo_com"
        android:backgroundTint="#fff"
        app:layout_constraintStart_toStartOf="@+id/googlebtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ssobtn"
        android:layout_width="292dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="460dp"
        android:backgroundTint="#000512"
        android:text="@string/log_in_with_your_organisation"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/emailloginbtn"
        android:layout_width="284dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="#000512"
        android:text="@string/log_in_with_email"
        android:textColor="#0074ff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#0074ff"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="293dp"
        android:layout_height="61dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="636dp"
        android:backgroundTint="#0074ff"
        android:text="@string/new_to_coursera_create_an_account"
        android:textColor="#000512"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#0074ff"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/facebookbtn"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="396dp"
        android:backgroundTint="#000512"
        android:text="   Facebook"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#0074ff"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/fblogoview"
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="408dp"
        android:background="@drawable/facebook_svgrepo_com"
        android:backgroundTint="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/keylogoview"
        android:layout_width="23dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/key_svgrepo_com"
        android:backgroundTint="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="4dp"
        android:text="------------------------or----------------------------------"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

